fix scroll overflow

--- a/frontend/src/components/rtsp-grid/rtsp-grid.css
+++ b/frontend/src/components/rtsp-grid/rtsp-grid.css
@@ -24,6 +24,7 @@
 }
 
 .list {
+    height: 100%;
     padding: 0;
     margin: 0;
     list-style: none;
